src/parser.output
Terminals unused in grammar

   ETOK
   ARR_ID
   ARR_NUM
   EQUAL
   LABEL
   LTEQ
   GTEQ


Grammar

    0 $accept: program $end

    1 program: DECL '{' declblocks '}' CODE '{' codeblocks '}'

    2 terminal: ID
    3         | NUMBER

    4 declblocks: %empty
    5           | declblocks declblock ';'

    6 declblock: INT variables

    7 variables: variable
    8          | variables ',' variable

    9 variable: ID
   10         | ID '[' NUMBER ']'
   11         | ID '=' NUMBER
   12         | ID '=' '-' NUMBER

   13 codeblocks: %empty
   14           | codeblocks codeblock
   15           | codeblocks ID ':' codeblock

   16 codeblock: Assign ';'
   17          | If
   18          | While
   19          | Goto ';'
   20          | Print ';'
   21          | Read ';'
   22          | For

   23 Last: ID
   24     | ID '[' exp ']'

   25 exp: expr
   26    | NUMBER
   27    | Last
   28    | '-' NUMBER

   29 expr: exp '+' exp
   30     | exp '-' exp
   31     | exp '*' exp
   32     | exp '/' exp

   33 Assign: Last '=' exp
   34       | Last ADDEQ exp
   35       | Last SUBEQ exp

   36 Type: EQEQ
   37     | NOTEQ
   38     | MOREEQ
   39     | LESSEQ
   40     | '<'
   41     | '>'

   42 BoolExp: exp Type exp
   43        | BoolExp OR BoolExp
   44        | BoolExp AND BoolExp

   45 If: IF BoolExp '{' codeblocks '}'
   46   | IF BoolExp '{' codeblocks '}' ELSE '{' codeblocks '}'

   47 While: WHILE BoolExp '{' codeblocks '}'

   48 For: FOR ID '=' exp ',' terminal '{' codeblocks '}'
   49    | FOR ID '=' exp ',' terminal ',' terminal '{' codeblocks '}'

   50 Goto: GOTO ID IF BoolExp
   51     | GOTO ID

   52 Read: READ Last

   53 Print: PRINT Contents Content
   54      | PRINTLN Contents Content

   55 Contents: %empty
   56         | Contents Content ','

   57 Content: TOPRINT
   58        | Last
   59        | NUMBER


Terminals, with rules where they appear

$end (0) 0
'*' (42) 31
'+' (43) 29
',' (44) 8 48 49 56
'-' (45) 12 28 30
'/' (47) 32
':' (58) 15
';' (59) 5 16 19 20 21
'<' (60) 40
'=' (61) 11 12 33 48 49
'>' (62) 41
'[' (91) 10 24
']' (93) 10 24
'{' (123) 1 45 46 47 48 49
'}' (125) 1 45 46 47 48 49
error (256)
DECL (258) 1
CODE (259) 1
NUMBER (260) 3 10 11 12 26 28 59
INT (261) 6
ID (262) 2 9 10 11 12 15 23 24 48 49 50 51
ETOK (263)
ARR_ID (264)
ARR_NUM (265)
EQEQ (266) 36
EQUAL (267)
IF (268) 45 46 50
ELSE (269) 46
OR (270) 43
AND (271) 44
NOTEQ (272) 37
LESSEQ (273) 39
MOREEQ (274) 38
WHILE (275) 47
GOTO (276) 50 51
LABEL (277)
READ (278) 52
TOPRINT (279) 57
PRINT (280) 53
FOR (281) 48 49
SUBEQ (282) 35
ADDEQ (283) 34
PRINTLN (284) 54
LTEQ (285)
GTEQ (286)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
terminal (48)
    on left: 2 3, on right: 48 49
declblocks (49)
    on left: 4 5, on right: 1 5
declblock (50)
    on left: 6, on right: 5
variables (51)
    on left: 7 8, on right: 6 8
variable (52)
    on left: 9 10 11 12, on right: 7 8
codeblocks (53)
    on left: 13 14 15, on right: 1 14 15 45 46 47 48 49
codeblock (54)
    on left: 16 17 18 19 20 21 22, on right: 14 15
Last (55)
    on left: 23 24, on right: 27 33 34 35 52 58
exp (56)
    on left: 25 26 27 28, on right: 24 29 30 31 32 33 34 35 42 48 49
expr (57)
    on left: 29 30 31 32, on right: 25
Assign (58)
    on left: 33 34 35, on right: 16
Type (59)
    on left: 36 37 38 39 40 41, on right: 42
BoolExp (60)
    on left: 42 43 44, on right: 43 44 45 46 47 50
If (61)
    on left: 45 46, on right: 17
While (62)
    on left: 47, on right: 18
For (63)
    on left: 48 49, on right: 22
Goto (64)
    on left: 50 51, on right: 19
Read (65)
    on left: 52, on right: 21
Print (66)
    on left: 53 54, on right: 20
Contents (67)
    on left: 55 56, on right: 53 54 56
Content (68)
    on left: 57 58 59, on right: 53 54 56


State 0

    0 $accept: . program $end

    DECL  shift, and go to state 1

    program  go to state 2


State 1

    1 program: DECL . '{' declblocks '}' CODE '{' codeblocks '}'

    '{'  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: DECL '{' . declblocks '}' CODE '{' codeblocks '}'

    $default  reduce using rule 4 (declblocks)

    declblocks  go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: DECL '{' declblocks . '}' CODE '{' codeblocks '}'
    5 declblocks: declblocks . declblock ';'

    INT  shift, and go to state 6
    '}'  shift, and go to state 7

    declblock  go to state 8


State 6

    6 declblock: INT . variables

    ID  shift, and go to state 9

    variables  go to state 10
    variable   go to state 11


State 7

    1 program: DECL '{' declblocks '}' . CODE '{' codeblocks '}'

    CODE  shift, and go to state 12


State 8

    5 declblocks: declblocks declblock . ';'

    ';'  shift, and go to state 13


State 9

    9 variable: ID .
   10         | ID . '[' NUMBER ']'
   11         | ID . '=' NUMBER
   12         | ID . '=' '-' NUMBER

    '='  shift, and go to state 14
    '['  shift, and go to state 15

    $default  reduce using rule 9 (variable)


State 10

    6 declblock: INT variables .
    8 variables: variables . ',' variable

    ','  shift, and go to state 16

    $default  reduce using rule 6 (declblock)


State 11

    7 variables: variable .

    $default  reduce using rule 7 (variables)


State 12

    1 program: DECL '{' declblocks '}' CODE . '{' codeblocks '}'

    '{'  shift, and go to state 17


State 13

    5 declblocks: declblocks declblock ';' .

    $default  reduce using rule 5 (declblocks)


State 14

   11 variable: ID '=' . NUMBER
   12         | ID '=' . '-' NUMBER

    NUMBER  shift, and go to state 18
    '-'     shift, and go to state 19


State 15

   10 variable: ID '[' . NUMBER ']'

    NUMBER  shift, and go to state 20


State 16

    8 variables: variables ',' . variable

    ID  shift, and go to state 9

    variable  go to state 21


State 17

    1 program: DECL '{' declblocks '}' CODE '{' . codeblocks '}'

    $default  reduce using rule 13 (codeblocks)

    codeblocks  go to state 22


State 18

   11 variable: ID '=' NUMBER .

    $default  reduce using rule 11 (variable)


State 19

   12 variable: ID '=' '-' . NUMBER

    NUMBER  shift, and go to state 23


State 20

   10 variable: ID '[' NUMBER . ']'

    ']'  shift, and go to state 24


State 21

    8 variables: variables ',' variable .

    $default  reduce using rule 8 (variables)


State 22

    1 program: DECL '{' declblocks '}' CODE '{' codeblocks . '}'
   14 codeblocks: codeblocks . codeblock
   15           | codeblocks . ID ':' codeblock

    ID       shift, and go to state 25
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32
    '}'      shift, and go to state 33

    codeblock  go to state 34
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 23

   12 variable: ID '=' '-' NUMBER .

    $default  reduce using rule 12 (variable)


State 24

   10 variable: ID '[' NUMBER ']' .

    $default  reduce using rule 10 (variable)


State 25

   15 codeblocks: codeblocks ID . ':' codeblock
   23 Last: ID .
   24     | ID . '[' exp ']'

    ':'  shift, and go to state 43
    '['  shift, and go to state 44

    $default  reduce using rule 23 (Last)


State 26

   45 If: IF . BoolExp '{' codeblocks '}'
   46   | IF . BoolExp '{' codeblocks '}' ELSE '{' codeblocks '}'

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last     go to state 48
    exp      go to state 49
    expr     go to state 50
    BoolExp  go to state 51


State 27

   47 While: WHILE . BoolExp '{' codeblocks '}'

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last     go to state 48
    exp      go to state 49
    expr     go to state 50
    BoolExp  go to state 52


State 28

   50 Goto: GOTO . ID IF BoolExp
   51     | GOTO . ID

    ID  shift, and go to state 53


State 29

   52 Read: READ . Last

    ID  shift, and go to state 46

    Last  go to state 54


State 30

   53 Print: PRINT . Contents Content

    $default  reduce using rule 55 (Contents)

    Contents  go to state 55


State 31

   48 For: FOR . ID '=' exp ',' terminal '{' codeblocks '}'
   49    | FOR . ID '=' exp ',' terminal ',' terminal '{' codeblocks '}'

    ID  shift, and go to state 56


State 32

   54 Print: PRINTLN . Contents Content

    $default  reduce using rule 55 (Contents)

    Contents  go to state 57


State 33

    1 program: DECL '{' declblocks '}' CODE '{' codeblocks '}' .

    $default  reduce using rule 1 (program)


State 34

   14 codeblocks: codeblocks codeblock .

    $default  reduce using rule 14 (codeblocks)


State 35

   33 Assign: Last . '=' exp
   34       | Last . ADDEQ exp
   35       | Last . SUBEQ exp

    '='    shift, and go to state 58
    SUBEQ  shift, and go to state 59
    ADDEQ  shift, and go to state 60


State 36

   16 codeblock: Assign . ';'

    ';'  shift, and go to state 61


State 37

   17 codeblock: If .

    $default  reduce using rule 17 (codeblock)


State 38

   18 codeblock: While .

    $default  reduce using rule 18 (codeblock)


State 39

   22 codeblock: For .

    $default  reduce using rule 22 (codeblock)


State 40

   19 codeblock: Goto . ';'

    ';'  shift, and go to state 62


State 41

   21 codeblock: Read . ';'

    ';'  shift, and go to state 63


State 42

   20 codeblock: Print . ';'

    ';'  shift, and go to state 64


State 43

   15 codeblocks: codeblocks ID ':' . codeblock

    ID       shift, and go to state 46
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32

    codeblock  go to state 65
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 44

   24 Last: ID '[' . exp ']'

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 66
    expr  go to state 50


State 45

   26 exp: NUMBER .

    $default  reduce using rule 26 (exp)


State 46

   23 Last: ID .
   24     | ID . '[' exp ']'

    '['  shift, and go to state 44

    $default  reduce using rule 23 (Last)


State 47

   28 exp: '-' . NUMBER

    NUMBER  shift, and go to state 67


State 48

   27 exp: Last .

    $default  reduce using rule 27 (exp)


State 49

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   42 BoolExp: exp . Type exp

    '+'     shift, and go to state 68
    '-'     shift, and go to state 69
    '/'     shift, and go to state 70
    '*'     shift, and go to state 71
    '<'     shift, and go to state 72
    '>'     shift, and go to state 73
    EQEQ    shift, and go to state 74
    NOTEQ   shift, and go to state 75
    LESSEQ  shift, and go to state 76
    MOREEQ  shift, and go to state 77

    Type  go to state 78


State 50

   25 exp: expr .

    $default  reduce using rule 25 (exp)


State 51

   43 BoolExp: BoolExp . OR BoolExp
   44        | BoolExp . AND BoolExp
   45 If: IF BoolExp . '{' codeblocks '}'
   46   | IF BoolExp . '{' codeblocks '}' ELSE '{' codeblocks '}'

    OR   shift, and go to state 79
    AND  shift, and go to state 80
    '{'  shift, and go to state 81


State 52

   43 BoolExp: BoolExp . OR BoolExp
   44        | BoolExp . AND BoolExp
   47 While: WHILE BoolExp . '{' codeblocks '}'

    OR   shift, and go to state 79
    AND  shift, and go to state 80
    '{'  shift, and go to state 82


State 53

   50 Goto: GOTO ID . IF BoolExp
   51     | GOTO ID .

    IF  shift, and go to state 83

    $default  reduce using rule 51 (Goto)


State 54

   52 Read: READ Last .

    $default  reduce using rule 52 (Read)


State 55

   53 Print: PRINT Contents . Content
   56 Contents: Contents . Content ','

    NUMBER   shift, and go to state 84
    ID       shift, and go to state 46
    TOPRINT  shift, and go to state 85

    Last     go to state 86
    Content  go to state 87


State 56

   48 For: FOR ID . '=' exp ',' terminal '{' codeblocks '}'
   49    | FOR ID . '=' exp ',' terminal ',' terminal '{' codeblocks '}'

    '='  shift, and go to state 88


State 57

   54 Print: PRINTLN Contents . Content
   56 Contents: Contents . Content ','

    NUMBER   shift, and go to state 84
    ID       shift, and go to state 46
    TOPRINT  shift, and go to state 85

    Last     go to state 86
    Content  go to state 89


State 58

   33 Assign: Last '=' . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 90
    expr  go to state 50


State 59

   35 Assign: Last SUBEQ . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 91
    expr  go to state 50


State 60

   34 Assign: Last ADDEQ . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 92
    expr  go to state 50


State 61

   16 codeblock: Assign ';' .

    $default  reduce using rule 16 (codeblock)


State 62

   19 codeblock: Goto ';' .

    $default  reduce using rule 19 (codeblock)


State 63

   21 codeblock: Read ';' .

    $default  reduce using rule 21 (codeblock)


State 64

   20 codeblock: Print ';' .

    $default  reduce using rule 20 (codeblock)


State 65

   15 codeblocks: codeblocks ID ':' codeblock .

    $default  reduce using rule 15 (codeblocks)


State 66

   24 Last: ID '[' exp . ']'
   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71
    ']'  shift, and go to state 93


State 67

   28 exp: '-' NUMBER .

    $default  reduce using rule 28 (exp)


State 68

   29 expr: exp '+' . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 94
    expr  go to state 50


State 69

   30 expr: exp '-' . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 95
    expr  go to state 50


State 70

   32 expr: exp '/' . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 96
    expr  go to state 50


State 71

   31 expr: exp '*' . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 97
    expr  go to state 50


State 72

   40 Type: '<' .

    $default  reduce using rule 40 (Type)


State 73

   41 Type: '>' .

    $default  reduce using rule 41 (Type)


State 74

   36 Type: EQEQ .

    $default  reduce using rule 36 (Type)


State 75

   37 Type: NOTEQ .

    $default  reduce using rule 37 (Type)


State 76

   39 Type: LESSEQ .

    $default  reduce using rule 39 (Type)


State 77

   38 Type: MOREEQ .

    $default  reduce using rule 38 (Type)


State 78

   42 BoolExp: exp Type . exp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 98
    expr  go to state 50


State 79

   43 BoolExp: BoolExp OR . BoolExp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last     go to state 48
    exp      go to state 49
    expr     go to state 50
    BoolExp  go to state 99


State 80

   44 BoolExp: BoolExp AND . BoolExp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last     go to state 48
    exp      go to state 49
    expr     go to state 50
    BoolExp  go to state 100


State 81

   45 If: IF BoolExp '{' . codeblocks '}'
   46   | IF BoolExp '{' . codeblocks '}' ELSE '{' codeblocks '}'

    $default  reduce using rule 13 (codeblocks)

    codeblocks  go to state 101


State 82

   47 While: WHILE BoolExp '{' . codeblocks '}'

    $default  reduce using rule 13 (codeblocks)

    codeblocks  go to state 102


State 83

   50 Goto: GOTO ID IF . BoolExp

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last     go to state 48
    exp      go to state 49
    expr     go to state 50
    BoolExp  go to state 103


State 84

   59 Content: NUMBER .

    $default  reduce using rule 59 (Content)


State 85

   57 Content: TOPRINT .

    $default  reduce using rule 57 (Content)


State 86

   58 Content: Last .

    $default  reduce using rule 58 (Content)


State 87

   53 Print: PRINT Contents Content .
   56 Contents: Contents Content . ','

    ','  shift, and go to state 104

    $default  reduce using rule 53 (Print)


State 88

   48 For: FOR ID '=' . exp ',' terminal '{' codeblocks '}'
   49    | FOR ID '=' . exp ',' terminal ',' terminal '{' codeblocks '}'

    NUMBER  shift, and go to state 45
    ID      shift, and go to state 46
    '-'     shift, and go to state 47

    Last  go to state 48
    exp   go to state 105
    expr  go to state 50


State 89

   54 Print: PRINTLN Contents Content .
   56 Contents: Contents Content . ','

    ','  shift, and go to state 104

    $default  reduce using rule 54 (Print)


State 90

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   33 Assign: Last '=' exp .

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71

    $default  reduce using rule 33 (Assign)


State 91

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   35 Assign: Last SUBEQ exp .

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71

    $default  reduce using rule 35 (Assign)


State 92

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   34 Assign: Last ADDEQ exp .

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71

    $default  reduce using rule 34 (Assign)


State 93

   24 Last: ID '[' exp ']' .

    $default  reduce using rule 24 (Last)


State 94

   29 expr: exp . '+' exp
   29     | exp '+' exp .
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp

    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71

    $default  reduce using rule 29 (expr)


State 95

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   30     | exp '-' exp .
   31     | exp . '*' exp
   32     | exp . '/' exp

    '/'  shift, and go to state 70
    '*'  shift, and go to state 71

    $default  reduce using rule 30 (expr)


State 96

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   32     | exp '/' exp .

    $default  reduce using rule 32 (expr)


State 97

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   31     | exp '*' exp .
   32     | exp . '/' exp

    '/'  shift, and go to state 70

    $default  reduce using rule 31 (expr)


State 98

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   42 BoolExp: exp Type exp .

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71

    $default  reduce using rule 42 (BoolExp)


State 99

   43 BoolExp: BoolExp . OR BoolExp
   43        | BoolExp OR BoolExp .
   44        | BoolExp . AND BoolExp

    AND  shift, and go to state 80

    $default  reduce using rule 43 (BoolExp)


State 100

   43 BoolExp: BoolExp . OR BoolExp
   44        | BoolExp . AND BoolExp
   44        | BoolExp AND BoolExp .

    $default  reduce using rule 44 (BoolExp)


State 101

   14 codeblocks: codeblocks . codeblock
   15           | codeblocks . ID ':' codeblock
   45 If: IF BoolExp '{' codeblocks . '}'
   46   | IF BoolExp '{' codeblocks . '}' ELSE '{' codeblocks '}'

    ID       shift, and go to state 25
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32
    '}'      shift, and go to state 106

    codeblock  go to state 34
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 102

   14 codeblocks: codeblocks . codeblock
   15           | codeblocks . ID ':' codeblock
   47 While: WHILE BoolExp '{' codeblocks . '}'

    ID       shift, and go to state 25
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32
    '}'      shift, and go to state 107

    codeblock  go to state 34
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 103

   43 BoolExp: BoolExp . OR BoolExp
   44        | BoolExp . AND BoolExp
   50 Goto: GOTO ID IF BoolExp .

    OR   shift, and go to state 79
    AND  shift, and go to state 80

    $default  reduce using rule 50 (Goto)


State 104

   56 Contents: Contents Content ',' .

    $default  reduce using rule 56 (Contents)


State 105

   29 expr: exp . '+' exp
   30     | exp . '-' exp
   31     | exp . '*' exp
   32     | exp . '/' exp
   48 For: FOR ID '=' exp . ',' terminal '{' codeblocks '}'
   49    | FOR ID '=' exp . ',' terminal ',' terminal '{' codeblocks '}'

    '+'  shift, and go to state 68
    '-'  shift, and go to state 69
    '/'  shift, and go to state 70
    '*'  shift, and go to state 71
    ','  shift, and go to state 108


State 106

   45 If: IF BoolExp '{' codeblocks '}' .
   46   | IF BoolExp '{' codeblocks '}' . ELSE '{' codeblocks '}'

    ELSE  shift, and go to state 109

    $default  reduce using rule 45 (If)


State 107

   47 While: WHILE BoolExp '{' codeblocks '}' .

    $default  reduce using rule 47 (While)


State 108

   48 For: FOR ID '=' exp ',' . terminal '{' codeblocks '}'
   49    | FOR ID '=' exp ',' . terminal ',' terminal '{' codeblocks '}'

    NUMBER  shift, and go to state 110
    ID      shift, and go to state 111

    terminal  go to state 112


State 109

   46 If: IF BoolExp '{' codeblocks '}' ELSE . '{' codeblocks '}'

    '{'  shift, and go to state 113


State 110

    3 terminal: NUMBER .

    $default  reduce using rule 3 (terminal)


State 111

    2 terminal: ID .

    $default  reduce using rule 2 (terminal)


State 112

   48 For: FOR ID '=' exp ',' terminal . '{' codeblocks '}'
   49    | FOR ID '=' exp ',' terminal . ',' terminal '{' codeblocks '}'

    '{'  shift, and go to state 114
    ','  shift, and go to state 115


State 113

   46 If: IF BoolExp '{' codeblocks '}' ELSE '{' . codeblocks '}'

    $default  reduce using rule 13 (codeblocks)

    codeblocks  go to state 116


State 114

   48 For: FOR ID '=' exp ',' terminal '{' . codeblocks '}'

    $default  reduce using rule 13 (codeblocks)

    codeblocks  go to state 117


State 115

   49 For: FOR ID '=' exp ',' terminal ',' . terminal '{' codeblocks '}'

    NUMBER  shift, and go to state 110
    ID      shift, and go to state 111

    terminal  go to state 118


State 116

   14 codeblocks: codeblocks . codeblock
   15           | codeblocks . ID ':' codeblock
   46 If: IF BoolExp '{' codeblocks '}' ELSE '{' codeblocks . '}'

    ID       shift, and go to state 25
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32
    '}'      shift, and go to state 119

    codeblock  go to state 34
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 117

   14 codeblocks: codeblocks . codeblock
   15           | codeblocks . ID ':' codeblock
   48 For: FOR ID '=' exp ',' terminal '{' codeblocks . '}'

    ID       shift, and go to state 25
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32
    '}'      shift, and go to state 120

    codeblock  go to state 34
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 118

   49 For: FOR ID '=' exp ',' terminal ',' terminal . '{' codeblocks '}'

    '{'  shift, and go to state 121


State 119

   46 If: IF BoolExp '{' codeblocks '}' ELSE '{' codeblocks '}' .

    $default  reduce using rule 46 (If)


State 120

   48 For: FOR ID '=' exp ',' terminal '{' codeblocks '}' .

    $default  reduce using rule 48 (For)


State 121

   49 For: FOR ID '=' exp ',' terminal ',' terminal '{' . codeblocks '}'

    $default  reduce using rule 13 (codeblocks)

    codeblocks  go to state 122


State 122

   14 codeblocks: codeblocks . codeblock
   15           | codeblocks . ID ':' codeblock
   49 For: FOR ID '=' exp ',' terminal ',' terminal '{' codeblocks . '}'

    ID       shift, and go to state 25
    IF       shift, and go to state 26
    WHILE    shift, and go to state 27
    GOTO     shift, and go to state 28
    READ     shift, and go to state 29
    PRINT    shift, and go to state 30
    FOR      shift, and go to state 31
    PRINTLN  shift, and go to state 32
    '}'      shift, and go to state 123

    codeblock  go to state 34
    Last       go to state 35
    Assign     go to state 36
    If         go to state 37
    While      go to state 38
    For        go to state 39
    Goto       go to state 40
    Read       go to state 41
    Print      go to state 42


State 123

   49 For: FOR ID '=' exp ',' terminal ',' terminal '{' codeblocks '}' .

    $default  reduce using rule 49 (For)
